--- a/templates/cet.html
+++ b/templates/cet.html
@@ -7,7 +7,7 @@
 
     <p class="search-title">四六级成绩查询</p>
 
-    <form name="main" method="post" accept-charset="utf-8" class="search-form" action="http://zhweitest.duapp.com/cet">
+    <form name="main" method="post" accept-charset="utf-8" class="search-form" action="">
 
         {% if  not form.valid %}
             <p class="alert alert-danger">输入错误:</p>
