--- a/templates/base-new.html
+++ b/templates/base-new.html
@@ -23,7 +23,7 @@
 
 {% include "includes/footer.html" %}
 
-<script src="/static/js/stick-up.min.js"></script>
+{#<script src="/static/js/stick-up.min.js"></script>#}
 {#<script type="text/javascript">#}
 {#    //initializing jQuery#}
 {#    jQuery(function ($) {#}
