--- a/templates/donate.html
+++ b/templates/donate.html
@@ -3,57 +3,56 @@
 {% block title %}赞助{% endblock %}
 
 {% block head %}
-    <style>
-        html, body {
-            background-color: #FFFFFF;
-        }
-
-        .jumbotron {
-            text-align: center;
-        }
-    </style>
+<style>
+html, body {
+  background-color: #FFFFFF;
+}
+.jumbotron {
+  text-align: center;
+}
+</style>
 {% endblock %}
 
 {% block content %}
 
-    <div class="center col-md-9">
-        <div class="jumbotron">
-            <a href='http://me.alipay.com/zhweifcx'>
-                <img src='https://img.alipay.com/sys/personalprod/style/mc/btn-index.png'/>
-            </a>
-        </div>
+<div class="center col-md-9">
+  <div class="jumbotron">
+    <a href="http://gotit.qiniudn.com/img/alipay-15.png" title="支付宝收款二维码" target="_blank">
+      <img src='http://gotit.qiniudn.com/img/alipay-5.png' alt="支付宝收款二维码"/>
+    </a>
+  </div>
 
-        <hr/>
-        <div>
-            <h5>&nbsp;&nbsp;点击上面图片使用支付宝赞助我们, 只要您的金额&nbsp;<i>&gt;0元</i>&nbsp;, 都代表着您对我们的支持, 我们都会致以您同样的感谢!
-                您可以选择自己名字是否出现在下面的<i>网站赞助者名单</i>上, 请在付款说明中注明, 谢谢!</h5>
-            <br/>
-            <br/>
-        </div>
+  <hr/>
+  <div>
+    <p>使用支付宝手机客户端扫描点击上面的二维码图片赞助我们, 只要您的金额&nbsp;<strong>&gt;0元</strong>&nbsp;, 都代表着您对我们的支持, 我们都会致以您同样的感谢!</p>
+    <p>您可以选择自己名字是否出现在下面的<strong>网站赞助者名单</strong>上, 请在付款说明中注明, 谢谢!</p>
+    <br/>
+    <br/>
+  </div>
 
-        <div>
-            <h3 id="names">赞助者名单</h3>
-            <br/>
-            <div class="list-group-item">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th>赞助者</th>
-                        <th><strong>金额</strong></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for sp in sponsor %}
-                        <tr>
-                            <th>{{ sp.name }}</th>
-                            <td>{{ sp.much }}&nbsp;元</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
+  <div>
+    <h3 id="names">赞助者名单</h3>
+    <br/>
+    <div class="list-group-item">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>赞助者</th>
+            <th><strong>金额</strong></th>
+          </tr>
+        </thead>
+        <tbody>
+        {% for sp in sponsor %}
+        <tr>
+          <th>{{ sp.name }}</th>
+          <td>{{ sp.much }}&nbsp;元</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+      </table>
     </div>
+  </div>
+
+</div>
 
 {% endblock %}
