修改alert调用机制
- 添加PageAlert类
- 修改alert显示位置
- 修改基本模板

--- a/templates/cet.html
+++ b/templates/cet.html
@@ -1,30 +1,29 @@
-{% extends "base-new.html" %}
+{% extends "base-search.html" %}
 
 {% block title %}四六级成绩查询{% endblock %}
 
 {% block content %}
     <div class="search-area col-lg-5">
 
-    <p class="search-title">四六级成绩查询</p>
+        <p class="search-title">四六级成绩查询</p>
 
-    <form name="main" method="post" accept-charset="utf-8" class="search-form" action="">
-
-        {% if  not form.valid %}
-            <p class="alert alert-danger">输入错误:</p>
-        {% endif %}
-        {% for d in form.inputs %}
-            <p><input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control"
-                      placeholder="{{ d.description }}" {% if loop.first %}autofocus{% endif %}/></p>
-        {% endfor %}
-        <span class="help-block">
+        <form name="main" method="post" accept-charset="utf-8" class="search-form" action="">
+            {% if  not form.valid %}
+                <p class="alert alert-danger">输入错误:</p>
+            {% endif %}
+            {% for d in form.inputs %}
+                <p><input type="{{ d.get_type() }}" id="{{ d.id }}" name="{{ d.name }}" class="form-control"
+                          placeholder="{{ d.description }}" {% if loop.first %}autofocus{% endif %}/></p>
+            {% endfor %}
+            <span class="help-block">
             姓名多于三个字的只输入前三个字, <strong>查询较慢时可以多点几次 "查询"</strong>
         </span>
 
-        <div class="search-control">
-            <button type="submit" class="btn btn-primary">查询</button>
-            <button type="reset" class="btn">重置</button>
-        </div>
-    </form>
+            <div class="search-control">
+                <button type="submit" class="btn btn-primary">查询</button>
+                <button type="reset" class="btn">重置</button>
+            </div>
+        </form>
 
     </div>
 
