--- a/templates/base-search.html
+++ b/templates/base-search.html
@@ -1,92 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>{% block title %}{% endblock %}</title>
-    {%- include  "includes/head.html" -%}
+<head>
+    <title>{%- block title -%}{%- endblock -%}&middot; Got it</title>
+    {% include "includes/head.html" %}
+</head>
+<body>
+<div class="navbar navbar-default navbar-fixed-top">
+    {% include "includes/nav.html" %}
+</div>
 
 
-    <style type="text/css">
-      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-      }
-      .form-signin {
-        max-width: 400px;
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-        -webkit-border-radius: 5px;
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-        -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-        box-shadow: 0 1px 2px rgba(0,0,0,.05);
-      }
-      .form-signin .form-signin-heading,
-      .form-signin .checkbox {
-        margin-bottom: 10px;
-      }
-      .form-signin input[type="text"],
-      .form-signin input[type="password"] {
-        font-size: 16px;
-        height: auto;
-        margin-bottom: 15px;
-        padding: 7px 9px;
-      }
-    </style>
-    {%- block header -%}
-
-    {% endblock %}
-  </head>
-
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top bs-navbar" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Gotit</a>
+<div class="container" id="site-body">
+    {% if alert.index %}
+        <div class="alert alert-dismissable alert-info">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <strong>Heads up!</strong> {{- alert.index }}
         </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">首页</a></li>
-            <li><a href="/score">绩点·成绩</a></li>
-            <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">更多<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="/libr">图书馆余书查询</a></li>
-                <li><a href="/cet">CET</a></li>
-                <li><a href="/cet/former">往年CET成绩</a></li>
-                <li class="divider"></li>
-                <li><a href="/notice.html">公告</a></li>
-                <li><a href="/contact.html">联系我们</a></li>
-              </ul>
-            </li>
-            <li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-          </ul>
-        </div><!-- /.navbar-collapse -->
-    </nav>
+    {% endif %}
+    <div>
+        {% block content -%}{%- endblock %}
+    </div>
+</div>
 
-    <div id="container" class= "container"><br>
+{% include "includes/footer.html" %}
 
-      {%- block content -%}{% endblock %}
+{% block foot -%}{%- endblock %}
 
-      {%- include "includes/footer.html" -%}
-
-      </div> <!-- /container -->
-
-      {%- include "includes/js.html" -%}
-
-      {%- block foot -%}{% endblock %}
-
-      <!-- baidu sitecenter   -->
-      </body>
-    </html>
+</body>
+</html>
