--- a/templates/score.html
+++ b/templates/score.html
@@ -1,4 +1,4 @@
-{%- extends "base-new.html" -%}
+{%- extends "base-search.html" -%}
 
 {%- block title -%}成绩查询系统{%- endblock -%}
 
@@ -6,7 +6,12 @@
     <div class="search-area col-lg-5">
 
         <p class="search-title">成绩查询系统</p>
-
+        {% if alert.score %}
+        <div class="alert alert-dismissable alert-info">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            {{ alert.score }}
+        </div>
+        {% endif %}
         <form name="main" method="post" accept-charset="utf-8" class="search-form">
             {%- if not form.valid -%}
                 <p class="alert alert-danger">输入错误:</p>
