--- a/templates/panel.html
+++ b/templates/panel.html
@@ -82,10 +82,10 @@
   {% elif opera == 'readlog' %}
   <h2 class="lead">网站日志</h2>
   <p>
-    <a href="/readlog/1" class='btn btn-default'>最后50行</a>
-    <a href="/readlog/2" class='btn btn-default'>最后100行</a>
-    <a href="/readlog/3" class='btn btn-default'>最后150行</a>
-    <a href="/readlog/4" class='btn btn-default'>最后200行</a>
+    <a href="./1" class='btn btn-default'>最后50行</a>
+    <a href="./2" class='btn btn-default'>最后100行</a>
+    <a href="./3" class='btn btn-default'>最后150行</a>
+    <a href="./4" class='btn btn-default'>最后200行</a>
   </p>
   <div>
     <pre>
