--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -10,7 +10,7 @@
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="http://{{ domains.main }}/zheng">正方</a></li>
+                <li><a href="http://{{ domains.main }}/zheng/nocode">正方</a></li>
                 <li><a href="http://{{ domains.main }}/score">绩点</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">其他<b class="caret"></b></a>
