--- a/templates/panel.html
+++ b/templates/panel.html
@@ -33,8 +33,10 @@
             <td class="hidden-xs">{{ l.datetime }}</td>
             {% elif item == 'developer' %}
             <td><span class="label label-primary">{{ l.token }}</span></td>
+            <td><span class="label label-info">{{ l.day }}</span></td>
+            <td><span class="label label-primary">{{ l.total }}</span></td>
+            <td class='text-overflow'>{{ l.description }}</td>
             <td class="hidden-xs">{{ l.datetime.strftime('%Y-%m-%d') }}</td>
-            <td class='hidden-xs text-overflow'>{{ l.description }}</td>
             {% elif item == 'wxcomment' %}
               <td class='text-overflow'>{{ l.content }}</td>
               <td class="hidden-xs">{{ l.datetime }}</td>
