--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
     <div>
         <div class="col-lg-4">
-            <div class="panel panel-info">
+            <div class="panel panel-primary">
                 <div class="panel-heading">
                     <h3 class="panel-title">正方教务系统</h3>
                 </div>
@@ -51,6 +51,18 @@
             </div>
             <div class="panel panel-primary">
                 <div class="panel-heading">
+                    <h3 class="panel-title">正方教务系统(验证码)</h3>
+                </div>
+                <div class="panel-body">
+                    <p>查询本学期最新成绩, 最新课表, 考试时间</p>
+                    {% if alert.zheng %}{{ alert.zheng }}{% endif %}
+                </div>
+                <div class="panel-footer">
+                    <a href="http://{{ domains.main }}/zheng" class="btn btn-default btn-block">Go</a>
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">
                     <h3 class="panel-title">Former CET</h3>
                 </div>
                 <div class="panel-body">
@@ -63,16 +75,14 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class="panel panel-primary">
+            <div class="panel panel-danger">
                 <div class="panel-heading">
-                    <h3 class="panel-title">正方教务系统</h3>
+                    <h3 class="panel-title">赞助商&middot;折800&nbsp;APP</h3>
                 </div>
                 <div class="panel-body">
-                    <p>查询本学期最新成绩, 最新课表, 考试时间</p>
-                    {% if alert.zheng %}{{ alert.zheng }}{% endif %}
-                </div>
-                <div class="panel-footer">
-                    <a href="http://{{ domains.main }}/zheng" class="btn btn-default btn-block">Go</a>
+                    <a href="http://campus.tuan800.com/campus/promotion/download/zhe800/431332.apk" target="_blank">
+                        <img src="http://gotit.qiniudn.com/img/zhe800.jpg" style="width: 100%;" alt="折800"/>
+                    </a>
                 </div>
             </div>
             <div class="panel panel-primary">
