--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
                     <h3 class="panel-title">赞助商&middot;折800&nbsp;APP</h3>
                 </div>
                 <div class="panel-body">
-                    <a href="http://campus.tuan800.com/campus/promotion/download/zhe800/431332.apk" target="_blank">
+                    <a href="http://{{ domains.main }}/ad/zhe800" target="_blank">
                         <img src="http://gotit.qiniudn.com/img/zhe800.jpg" style="width: 100%;" alt="折800"/>
                     </a>
                 </div>
