修改jumbotron在小屏幕上的显示方式

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -10,6 +10,8 @@
         </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
+              <li class="visible-xs">
+              <p style="color: #ffffff;text-align: center;font-weight: bolder;">{{ alert.head }}</p></li>
                 <li><a href="http://{{ domains.main }}/zheng/nocode">正方</a></li>
                 <li><a href="http://{{ domains.main }}/score">绩点</a></li>
                 <li>
