--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<div class="index-jumbotron jumbotron">
+<div class="index-jumbotron jumbotron hidden-xs">
     <div class="container">
         <h1>Got it</h1>
 
