推送功能完成
- 每十分钟查询一次，如果更新则邮件通知用户

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -20,6 +20,7 @@
                         <li><a href="http://{{ domains.main }}/cet/former">往年CET成绩</a></li>
                     </ul>
                 </li>
+                <li><a href="http://{{ domains.main }}/cron.html"><strong>推送</strong></a></li>
                 <li><a href="http://{{ domains.main }}/notice.html">公告</a></li>
                 <li><a href="http://{{ domains.main }}/comment.html">留言</a></li>
                 <li><a href="http://{{ domains.main }}/donate.html">赞助</a></li>
