--- a/templates/base-panel.html
+++ b/templates/base-panel.html
@@ -57,11 +57,13 @@
                   <li><a href="/o/ls/donate"><i class="glyphicon glyphicon-usd"></i>&nbsp;捐赠者</a></li>
                   <li><a href="/o/ls/notice"><i class="glyphicon glyphicon-send"></i>&nbsp;网站动态</a></li>
                   <li class="divider"></li>
+                  <li ><a href="/backup"><i class="glyphicon glyphicon-cloud-upload"></i>网站备份</a></li>
                   <li><a href="/o/ls/developer">开发者Token</a></li>
                 </ul>
               </li>
               <li ><a href="/single/info"><strong>Single</strong></a></li>
-              <li ><a href="/backup"><i class="glyphicon glyphicon-cloud-upload"></i>网站备份</a></li>
+
+              <li ><a href="/users"><i class="glyphicon glyphicon-user"></i>用户管理</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-eye-open"></i>&nbsp;网站日志<span class="caret"></span></a>
                 <ul class="dropdown-menu">
