添加折800单页

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>我们为你Got it&middot; Got it</title>
+    <title>我们为你Got it &middot; Got it</title>
     {% include "includes/head.html" %}
 </head>
 
@@ -78,12 +78,15 @@
         <div class="col-lg-4">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title">赞助商&middot;折800&nbsp;APP</h3>
+                    <h3 class="panel-title">购物神器 &middot;折800</h3>
                 </div>
                 <div class="panel-body">
                     <a href="http://{{ domains.main }}/ad/zhe800" target="_blank">
-                        <img src="http://gotit.qiniudn.com/img/zhe800.jpg" style="width: 100%;" alt="折800"/>
+                        <img src="http://gotit.qiniudn.com/img/zhe800-01.jpg" style="width: 100%;" alt="折800"/>
                     </a>
+                </div>
+                <div class="panel-footer">
+                    <a href="http://{{ domains.main }}/ad/zhe800" class="btn btn-default btn-block">查看详情</a>
                 </div>
             </div>
             <div class="panel panel-primary">
