--- a/templates/cronpage.html
+++ b/templates/cronpage.html
@@ -25,6 +25,11 @@
         <h3>注意</h3>
         <ul>
             <li>申请服务需要提供相应密码</li>
+            <li>申请成绩推送前要保证能正常查询成绩，避免以下情况</li>
+            <ul>
+              <li>未完成当前学期的教学质量评价</li>
+              <li>没有更改过默认密码</li>
+            </ul>
             <li>发件人为 <span>no-reply@gotit.asia</span>，如果被放入垃圾邮件请将其加入白名单</li>
             <li>如有异常欢迎在留言页面提供相关信息</li>
         </ul>
