规范化项目
- 调整redis键命名方式
- 修改了主站类命名方式
- 缩减了无用类

--- a/templates/result.html
+++ b/templates/result.html
@@ -16,7 +16,7 @@
       <strong>{{ jidian }}</strong>
     </td>
     <td>
-      <strong><a href="/help/gpa.html">绩点计算方法</a></strong>
+      <strong><a href="/HelpGPA.html">绩点计算方法</a></strong>
     </td>
   </tr>
 </table>
