--- a/templates/panel.html
+++ b/templates/panel.html
@@ -109,8 +109,8 @@
         <th>{{ d }}</th>
         <td><span class='label label-primary'>{{ data[d] }}</span></td>
         <td>
-          {%- if d in ("internalerror", "cache") -%}
-          <a href="?zero={{ d }}" class="btn btn-default">置零</a>
+          {%- if d in ("InternalError", "Cache") -%}
+          <a href="?zero={{ d }}" class="btn btn-sm btn-default">置零</a>
           {%- endif -%}
         </td>
       </tr>
