--- a/templates/cronpage.html
+++ b/templates/cronpage.html
@@ -32,6 +32,7 @@
             </ul>
             <li>发件人为 <span>no-reply@gotit.asia</span>，如果被放入垃圾邮件请将其加入白名单</li>
             <li>如有异常欢迎在留言页面提供相关信息</li>
+	    <li><strong>PS: 2元以下捐赠不再开通此服务</strong>, 看到那么多0.0n元的捐赠实在心寒。</li>
         </ul>
         <p style="margin:50px 0 50px;" class="col-md-6 center">
             <a href="/cron.html?action=apply" class="btn btn-info btn-block">申请</a>
