--- a/templates/cronpage.html
+++ b/templates/cronpage.html
@@ -31,6 +31,7 @@
               <li>没有更改过默认密码</li>
             </ul>
             <li>发件人为 <span>no-reply@gotit.asia</span>，如果被放入垃圾邮件请将其加入白名单</li>
+            <li>强烈推荐不要使用QQ邮箱申请, QQ邮箱拒收率非常高, 已申请用户可以重新申请以替换邮箱.</li>
             <li>如有异常欢迎在留言页面提供相关信息</li>
 	    <li><strong>PS: 2元以下捐赠不再开通此服务</strong>, 看到那么多0.0n元的捐赠实在心寒。</li>
         </ul>
