bug::从url中提取域名的错误

--- a/templates/base-result.html
+++ b/templates/base-result.html
@@ -28,8 +28,7 @@
             <p>查询更多：
                 <a class="btn btn-primary" href='/more/zheng'>成绩</a>&nbsp;
                 <a class="btn btn-default" href='/more/lastscore'>上学期成绩</a>&nbsp;
-                <a class="btn btn-info" href='/more/lastkebiao'>最新课表</a>&nbsp;
-                <a class="btn btn-info" href='/more/kebiao'>上学期课表</a>&nbsp;
+                <a class="btn btn-info" href='/more/kebiao'>最新课表</a>&nbsp;
                 <a class="btn btn-warning" href='/more/kaoshi'>考试时间</a>&nbsp;
                 <a class="btn btn-success" href='/more/score'>绩点&总成绩</a>&nbsp;
                 <a class="btn btn-default" href='/more/oldcet'>往年CET</a>&nbsp;
